# api/gen/go/ogen/oas_response_encoders_gen.go
@@ -72,6 +72,19 @@ func encodeRecipesSearchResponse(response *RecipeSearchResultList, w http.Respon
 	return nil
 }
 
+func encodeServerInfoGetResponse(response *ServerInfoResponse, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeSpaceActivityListResponse(response *ActivityLogPage, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
